# PyCliffordMCP

./: .gitignore  README.md  pyproject.toml
.cursor/: mcp.json
dev/: dev_generalized_stabilizer.ipynb  dev_pyclifford.ipynb
dev/dev_test_pauli_string_multiplication/: README.md  config.json  figs.nb  llm_claude.py  llm_gemini.py  llm_openai.py  llm_pauli_benchmark.py  prompt_irrelevant.txt  prompt_template.txt  test.ipynb
dev/dev_test_pauli_string_multiplication/Manual_tests/: README.md
dev/dev_test_pauli_string_multiplication/claude-sonnet4/: test1.ipynb  test2.ipynb  test3.ipynb
dev/dev_test_pauli_string_multiplication/gpt-4o/: test1.ipynb  test2.ipynb  test3.ipynb
dev/pauli_string_multiplication/: LLM scalability.nb  seriesCollapse.m  seriesEB_fig2.m  seriesEB_fig3.m  seriesEB_fig4.m  seriesEB_fig5.m  seriesEB_fig8.m  test_result.ipynb
dev/pauli_string_multiplication/direct_multiplication/: .gitignore  SETUP.md  llm_pauli_benchmark.py  run-benchmark.ipynb
dev/pauli_string_multiplication/divide_and_conquer/: llm_divide_conquer_benchmark.py  run-benchmark.ipynb
dev/pauli_string_multiplication/letter_replace/: letter_replace_benchmrk.py  run-benchmark.ipynb
mcp_server/: __init__.py  main.py  schemas.py  server.py  tools.py
pyclifford/: __init__.py  circuit.py  device.py  paulialg.py  stabilizer.py  utils.py
pyclifford.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
resubmission/: cover_note.tex  list_of_changes.tex  list_of_changes.txt  main_revised.tex  response_to_referees.tex  response_to_referees_FINAL.md
(+32268 files in other folders)
